--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -72,7 +72,7 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 50px;
+  width: 36px;
   // set width only, for non-square avatars
   // height: 36px;
 
@@ -128,6 +128,10 @@
     margin-top: 10px;
     margin-bottom: 20px;
   }
+}
+.sidebar .author__bio {
+  font-family: $sans-serif;
+  font-size: $type-size-5;
 }
 
 .author__urls-wrapper {
