--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -129,6 +129,10 @@
     margin-bottom: 20px;
   }
 }
+.sidebar .author__bio {
+  font-family: $sans-serif;
+  font-size: $type-size-5;
+}
 
 .author__urls-wrapper {
   position: relative;
